--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 /*
 
-Landing Zero theme - A free landing page theme from BootstrapZero
-http://www.bootstrapzero.com
+https://www.benevolentwoman.com
 
 */
 
