--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://res.cloudinary.com/dyqlkc3ri/image/upload/e_grayscale/v1588347668/carolinamarinati-nappy-_mlidlo.jpg');
+    background-image: url('https://giphy.com/gifs/imminentflair-immensecharisma-immensecybercoder-Zd5RKr9swPX0gFlf9K/fullscreen');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
