--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588360510/giphy_d0iwjs.gif');
+    background-image: url('https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588357097/ezgif.com-gif-maker_1_dsnrg8.gif');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
