--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://media.giphy.com/media/Zd5RKr9swPX0gFlf9K/giphy.gif');
+    background-image: url('https://giphy.com/gifs/Zd5RKr9swPX0gFlf9K/html5');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
