--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://giphy.com/gifs/Zd5RKr9swPX0gFlf9K/html5');
+    background-image: url('https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588387631/20200501_194500_izmhl5.gif');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
