--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ header {
     color: #fff;
     width: 100%;
     background-color: #c9c9c9;
-    background-image: url('https://res.cloudinary.com/dyqlkc3ri/image/upload/c_scale,e_sharpen:93,w_522/v1588387631/20200501_194500_izmhl5.gif');
+    background-image: url('https://res.cloudinary.com/dyqlkc3ri/image/upload/v1588354192/colorful-paint-color-spreading-FZLP8VM_n3xwbm.gif');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
